--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=6666
-
 hello.properties.myKey=hello
 hello.properties.mykey=hello
 hello.properties.my-key=hello
@@ -46,3 +45,10 @@ spring.redis.lettuce.pool.min-idle=0
 ## из╠Ь╫з╣Ц
 #spring.redis.sentinel.nodes=
 #spring.redis.sentinel.password=
+
+# ------------------------------------------------------------ rabbitmq
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
