--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,18 @@
     </properties>
 
     <dependencies>
+
+        <!-- web项目依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <!-- 用别的日志依赖时，需排除默认依赖 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Redis客户端 -->
@@ -46,6 +55,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <!-- 默认客户端实现是lettuce，当想使用jedis需排除 -->
 <!--            <exclusions>-->
 <!--                <exclusion>-->
 <!--                    <groupId>io.lettuce</groupId>-->
@@ -113,6 +123,11 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
+        <!-- slf4j2 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -134,11 +149,11 @@
                         <artifactId>mysql-connector-java</artifactId>
                         <version>${mysql-connector-java.version}</version>
                     </dependency>
-                    <dependency>
-                        <groupId>com.hynnet</groupId>
-                        <artifactId>oracle-driver-ojdbc6</artifactId>
-                        <version>12.1.0.1</version>
-                    </dependency>
+<!--                    <dependency>-->
+<!--                        <groupId>com.hynnet</groupId>-->
+<!--                        <artifactId>oracle-driver-ojdbc6</artifactId>-->
+<!--                        <version>12.1.0.1</version>-->
+<!--                    </dependency>-->
                     <dependency>
                         <groupId>tk.mybatis</groupId>
                         <artifactId>mapper</artifactId>
