--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=6666
+server.port=8888
 hello.properties.myKey=hello
 hello.properties.mykey=hello
 hello.properties.my-key=hello
@@ -51,6 +51,7 @@ spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+#spring.rabbitmq.virtual-host=acelin
 
 # ------------------------------------------------------------ logger
 logging.config=classpath:log4j2.xml
