--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,5 +53,17 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 #spring.rabbitmq.virtual-host=acelin
 
+#NONE:是默认值,禁用发布确认模式
+#CORRELATED:开启发送确认功能，类型交互。发布消息成功到交换器后会触发回调方法
+#SIMPLE:
+spring.rabbitmq.publisher-confirm-type=correlated
+#开启发送失败回退
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
 # ------------------------------------------------------------ logger
 logging.config=classpath:log4j2.xml
+
+# ------------------------------------------------------------ rocketmq
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=producer-group
