缓存、路径调整

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,18 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-java.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <!-- Google Guava  如果服务上要使用本地缓存，可以考虑使用guava框架。Guava Cache与ConcurrentMap很相似 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
+
 
     </dependencies>
 
