--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,10 +47,10 @@ spring.redis.lettuce.pool.min-idle=0
 #spring.redis.sentinel.password=
 
 # ------------------------------------------------------------ rabbitmq
-spring.rabbitmq.host=127.0.0.1
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#spring.rabbitmq.host=127.0.0.1
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 #spring.rabbitmq.virtual-host=acelin
 
 #NONE:是默认值,禁用发布确认模式
@@ -65,5 +65,21 @@ spring.rabbitmq.listener.simple.acknowledge-mode=manual
 logging.config=classpath:log4j2.xml
 
 # ------------------------------------------------------------ rocketmq
-rocketmq.name-server=127.0.0.1:9876
-rocketmq.producer.group=producer-group
+#rocketmq.name-server=127.0.0.1:9876
+#rocketmq.producer.group=producer-group
+
+# ------------------------------------------------------------ mysql
+# 驱动
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# 数据库信息
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/acelin
+spring.datasource.username=root
+spring.datasource.password=ghbdb456$%^
+
+# ------------------------------------------------------------ mysql
+mybatis.mapper-locations=classpath:mybatismapper/*Mapper.xml
+mybatis.config-location=classpath:mybatis-config.xml
+# ------------------------------------------------------------ log4j2
+logging.level.com.zaxxer.hikari=error
+logging.level.org.springframework=error
+logging.level.org.hibernate=error
