--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             </exclusions>
         </dependency>
 
+        <!-- kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- Redis客户端 -->
         <dependency>
             <groupId>redis.clients</groupId>
