--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,18 @@
             <version>20.0</version>
         </dependency>
 
+        <!-- spring session -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
