--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: acelin-study
   kafka:
     bootstrap-servers: localhost:9092 #,localhost:9093,localhost:9094
     producer:
